--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,12 @@
     <link rel="stylesheet" href="../leaflet/leaflet.css" />
     <script defer src="../leaflet/leaflet.js"></script>
     <script defer src="script.js"></script>
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@400..800&family=Rubik:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@400..800&family=Rubik:wght@300&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <section class="flex">
@@ -22,10 +24,21 @@
       >
         <form action="index.html" class="pt-8 px-4">
           <button
-            class="hidden bg-red-600 text-white text-sm px-3 py-1 rounded"
+            class="hidden bg-red-600 text-white text-sm px-3 py-1 rounded flex gap-x-1"
             id="delPlaces"
           >
             حذف همه
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              viewBox="0 0 16 16"
+            >
+              <path
+                fill="white"
+                d="M7 3h2a1 1 0 0 0-2 0M6 3a2 2 0 1 1 4 0h4a.5.5 0 0 1 0 1h-.564l-1.205 8.838A2.5 2.5 0 0 1 9.754 15H6.246a2.5 2.5 0 0 1-2.477-2.162L2.564 4H2a.5.5 0 0 1 0-1zm1 3.5a.5.5 0 0 0-1 0v5a.5.5 0 0 0 1 0zM9.5 6a.5.5 0 0 0-.5.5v5a.5.5 0 0 0 1 0v-5a.5.5 0 0 0-.5-.5"
+              />
+            </svg>
           </button>
         </form>
         <ul
@@ -45,7 +58,7 @@
             <lord-icon
               src="https://cdn.lordicon.com/nqtddedc.json"
               trigger="hover"
-              colors="primary:#2563eb"
+              colors="primary:#ffffff"
               style="width: 30px; height: 30px"
             >
             </lord-icon>
