--- a/src/index.html
+++ b/src/index.html
@@ -89,6 +89,24 @@
           </form>
         </section>
       </section>
+      <section class="fixed top-[90%] right-[95%] w-full h-full z-[10000]">
+        <button
+          id="currentPosition"
+          class="bg-white/70 backdrop-blur p-3 rounded-full"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+          >
+            <path
+              fill="#00aaff"
+              d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4s4-1.79 4-4s-1.79-4-4-4m8.94 3A8.994 8.994 0 0 0 13 3.06V1h-2v2.06A8.994 8.994 0 0 0 3.06 11H1v2h2.06A8.994 8.994 0 0 0 11 20.94V23h2v-2.06A8.994 8.994 0 0 0 20.94 13H23v-2zM12 19c-3.87 0-7-3.13-7-7s3.13-7 7-7s7 3.13 7 7s-3.13 7-7 7"
+            />
+          </svg>
+        </button>
+      </section>
       <div id="map" class="w-auto h-[100vh] p-12 z-40"></div>
     </section>
   </body>
